Items, Grid, Dragula

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,18 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="navbar-fixed">
+<div class="navbar-fixed navbar-light bg-faded">
   <nav>
-    <div class="container">
-      <div class="nav-wrapper">
-        <a href="#" class="brand-logo">{{ title }}</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="#">Sass</a></li>
-          <li><a href="#">Components</a></li>
-          <li><a href="#">JavaScript</a></li>
-        </ul>
-      </div>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo center">
+          {{ title }}
+      </a>
+      <!--ul id="nav-mobile" class="right">
+        <li><a href="#">Sass</a></li>
+        <li><a href="#">Components</a></li>
+        <li><a href="#">JavaScript</a></li>
+      </ul-->
     </div>
   </nav>
 </div>
-<div class="container">
+
   <grid></grid>
-</div>
+
